[TASK] Do not wrap wrap variable access in strings Resolves #3

--- a/src/Scss/Styles.scss
+++ b/src/Scss/Styles.scss
@@ -46,6 +46,10 @@ pre,
   overflow-y: auto;
 }
 
+.github-link {
+  margin-top: 5px;
+}
+
 .site-header {
   background: url('../Images/header-bg.jpg') no-repeat 0 -520px;
   background-size: cover;
